# gspeech

./: README.md  package.xml
gspeech/: CMakeLists.txt  package.xml  setup.py
gspeech/scripts/: gspeech.py
gspeech_msgs/: CMakeLists.txt  package.xml
gspeech_msgs/msg/: Speech.msg  SpeechArray.msg
gspeech_ros/: CMakeLists.txt  package.xml
